data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3398.wast
;; 7. **Test Description**: Write a function involving a loop that makes multiple internal function calls. Each function modifies a shared counter variable, and a `br_if` inside the loop checks this counter to exit the loop.    - **Constraint**: Correctly cumulative updates on shared variables and condition checking with `br_if`.    - **Infinite Loop Relation**: Incorrect cumulative variable updates can mislead `br_if` leading to endless looping.

(assert_invalid
  (module
    (global $counter (mut i32) (i32.const 0))
    (func $increment (result i32)
      global.get $counter
      i32.const 1
      i32.add
      global.set $counter
    )
    (func (param i32) (result i32)
      loop $loop
        call $increment
        global.get $counter
        local.get 0
        i32.eq
        br_if $loop
      end
    )
  )
  "type mismatch"
)